God, Dom manipulation is sth

--- a/style.css
+++ b/style.css
@@ -2,100 +2,60 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'poppins', sans-serif;
+    
 }
 
 body {
     background-color: darkblue;
-    padding: 0.1rem;
 }
 
-.center-box {
-    background-color: white;
-    max-width: 600px;
-    height: 450px;
+.custom-box {
+    background-color: #fff;
+    width: 600px;
+    height: 150px;
     border-radius: 10px;
     margin: 100px auto;
-    padding: 30px;
 }
 
-.center-box h1 { 
-    border-bottom: 2px solid blue;
-    padding-bottom: 20px;
-    color: black;
+.custom-box h3 {
+    margin-bottom: 8px;
+    margin-left: 20px; 
+    padding-top: 20px;
 }
 
-.quiz h2 {
-    color: rgb(0, 0, 0);
-    font-weight: 500;
-} 
-
-#butt {
-    background-color: transparent;
-    width: 100%;
-    border: 1px solid #222;
-    border-radius: 10px;
-    margin: 10px 0;
-    padding: 10px;
-    transition: all 0.5s;
+.info {
+    margin-left: 20px;
 }
 
-#butt:hover {
-    background-color: #222;
+.custom-box button {
+    padding: 13px;
+    background: darkblue;
+    border-radius: 5px;
+    color: #fff;
+    border: none;
+    margin-top: 20px;
+    width: 150px;
+}
+
+.butt {
+    margin-left: 20px;
+}
+
+.butt button:hover {
+    background-color: black;
     cursor: cell;
 }
 
-.button {
-    display: flex;
-    justify-content: center;
-
-}
-
-#next {
-    background-color: darkblue;
-    border-radius: 7px;
-    color: #fff;
-    padding: 0.5rem 6rem;
-    /* width: 50%;  
-    height: 35px;  */
-    border: 0;
-    margin-top: 20px;
-    /* margin-left: 150px;  */
-}
-
-#next:hover {
-    background-color: #222;
-    cursor: pointer;
-}
-
-/* @media screen and (min-width: 320px) and (max-width: 380px) {
-    #next{
-
+@media screen and (min-width: 320px) and (max-width: 600px) {
+    .custom-box {
+        background-color: #fff;
+        width: 300px;
+        height: 150px;
+        border-radius: 10px;
+        margin: 100px auto;
+        margin-top: 60%;
     }
-} */
-
-/* .wrapper {
-    background-image: url(./nightsky.avif);
-    height: 640px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
 }
 
-#butt1 {
-    background-color: transparent;
-    border-radius: 14px;
-    width: 300px;
-    color: white;
-    height: 40px;
-}
-
-#butt2 {
-    background-color: transparent;
-    border-radius: 14px;
-    width: 300px;
-    color: white;
-    height: 40px;
-} */
+@media and (max-width: 900px)
+    
