--- a/ruby.css
+++ b/ruby.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: red;
+    background-color: rgb(185, 27, 27);
 }
 
 .custom-box {
@@ -29,7 +29,7 @@ body {
 
 .custom-box button {
     padding: 13px;
-    background: red;
+    background: rgb(185, 27, 27);
     border-radius: 5px;
     color: #fff;
     border: none;
