--- a/pythonData.css
+++ b/pythonData.css
@@ -177,10 +177,12 @@ body {
 
 #restart {
     background-color: #aca1a1;
-    border-radius: none;
+    border-radius: 20px;
     color: #fff;
-    padding: 5px;
+    padding: 10px;
     border: 5px;
+    margin-top: 250px;
+    margin-right: 20px;
 }
 
 #restart:hover {
