--- a/rubyData.css
+++ b/rubyData.css
@@ -13,7 +13,7 @@ body {
 .center-box {
     background-color: white;
     max-width: 600px;
-    height: 530px;
+    height: 570px;
     border-radius: 8px;
     margin: 100px auto;
     padding: 30px;
@@ -176,10 +176,12 @@ body {
 
 #restart {
     background-color: #aca1a1;
-    border-radius: none;
+    border-radius: 20px;
     color: #fff;
-    padding: 5px;
+    padding: 10px;
     border: 5px;
+    margin-top: 250px;
+    margin-right: 20px;
 }
 
 #restart:hover {
