--- a/rubyData.css
+++ b/rubyData.css
@@ -140,7 +140,6 @@ body {
 .button {
     display: flex;
     justify-content: center;
-
 }
 
 #next {
@@ -166,7 +165,6 @@ body {
     border: 0;
     margin-top: 20px;
     margin-right: 10px;
-    /* display: none; */
 }
 
 #back:hover {
@@ -175,13 +173,15 @@ body {
 }
 
 #restart {
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
     background-color: #aca1a1;
     border-radius: 20px;
     color: #fff;
     padding: 10px;
     border: 5px;
-    margin-top: 250px;
-    margin-right: 20px;
+    margin-top: 150px;
 }
 
 #restart:hover {
